--- a/FlappyBird/Base.lproj/Main.storyboard
+++ b/FlappyBird/Base.lproj/Main.storyboard
@@ -82,11 +82,11 @@
                                 </constraints>
                             </view>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ag9-5H-84m" userLabel="shareFacebook">
-                                <rect key="frame" x="250" y="433" width="100" height="25"/>
+                                <rect key="frame" x="250" y="375" width="100" height="20"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="gjE-O5-ag7"/>
-                                    <constraint firstAttribute="height" constant="25" id="hbT-Q7-Ced"/>
+                                    <constraint firstAttribute="height" constant="20" id="hbT-Q7-Ced"/>
                                 </constraints>
                                 <state key="normal" image="share-facebook.png"/>
                                 <connections>
@@ -99,7 +99,7 @@
                         <constraints>
                             <constraint firstItem="foz-WR-0ew" firstAttribute="top" secondItem="maK-i9-Uhn" secondAttribute="bottom" constant="5" id="7Yx-54-mMy"/>
                             <constraint firstItem="ag9-5H-84m" firstAttribute="top" secondItem="8Wc-Dm-xkU" secondAttribute="bottom" constant="8" id="Hbm-WG-KCc"/>
-                            <constraint firstItem="ag9-5H-84m" firstAttribute="top" secondItem="zya-cO-b0R" secondAttribute="bottom" constant="8" symbolic="YES" id="KUW-j7-dJl"/>
+                            <constraint firstItem="ag9-5H-84m" firstAttribute="top" secondItem="zya-cO-b0R" secondAttribute="bottom" constant="-50" id="KUW-j7-dJl"/>
                             <constraint firstItem="foz-WR-0ew" firstAttribute="leading" secondItem="x3r-rN-OZb" secondAttribute="trailing" constant="8" id="Mbf-JA-Xbp"/>
                             <constraint firstItem="zya-cO-b0R" firstAttribute="centerY" secondItem="3se-qz-xqx" secondAttribute="centerY" id="TQZ-dq-YXq"/>
                             <constraint firstItem="x3r-rN-OZb" firstAttribute="top" secondItem="maK-i9-Uhn" secondAttribute="bottom" constant="5" id="YlP-9Q-MCJ"/>
