--- a/FlappyBird/Base.lproj/Main.storyboard
+++ b/FlappyBird/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BV1-FR-VrT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BV1-FR-VrT">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="SuperMario256.ttf">
@@ -23,6 +24,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nhd-6z-qlX">
+                                <rect key="frame" x="541" y="25" width="50" height="50"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="hZn-G6-jEy"/>
+                                    <constraint firstAttribute="width" constant="50" id="lZU-kT-4um"/>
+                                </constraints>
+                                <state key="normal" image="facebookBtn.png"/>
+                                <connections>
+                                    <action selector="btnFacebookTapped:" destination="BV1-FR-VrT" eventType="touchUpInside" id="gBT-tM-20U"/>
+                                </connections>
+                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Best:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x3r-rN-OZb">
                                 <rect key="frame" x="5" y="25" width="39" height="21"/>
                                 <animations/>
@@ -102,9 +115,11 @@
                             <constraint firstItem="ag9-5H-84m" firstAttribute="top" secondItem="zya-cO-b0R" secondAttribute="bottom" constant="-50" id="KUW-j7-dJl"/>
                             <constraint firstItem="foz-WR-0ew" firstAttribute="leading" secondItem="x3r-rN-OZb" secondAttribute="trailing" constant="8" id="Mbf-JA-Xbp"/>
                             <constraint firstItem="zya-cO-b0R" firstAttribute="centerY" secondItem="3se-qz-xqx" secondAttribute="centerY" id="TQZ-dq-YXq"/>
+                            <constraint firstItem="nhd-6z-qlX" firstAttribute="top" secondItem="maK-i9-Uhn" secondAttribute="bottom" constant="5" id="Ttj-2X-7M9"/>
                             <constraint firstItem="x3r-rN-OZb" firstAttribute="top" secondItem="maK-i9-Uhn" secondAttribute="bottom" constant="5" id="YlP-9Q-MCJ"/>
                             <constraint firstItem="ag9-5H-84m" firstAttribute="top" secondItem="zya-cO-b0R" secondAttribute="bottom" constant="8" id="gcQ-r6-mBN"/>
                             <constraint firstItem="x3r-rN-OZb" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leading" constant="5" id="ngL-cW-2HX"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="nhd-6z-qlX" secondAttribute="trailing" constant="-11" id="qmv-ix-WCv"/>
                             <constraint firstItem="zya-cO-b0R" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="sss-Kv-XvM"/>
                             <constraint firstItem="ag9-5H-84m" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="uf0-LZ-Mi0"/>
                         </constraints>
@@ -116,6 +131,7 @@
                         </variation>
                     </view>
                     <connections>
+                        <outlet property="btnFacebook" destination="nhd-6z-qlX" id="2du-JZ-byt"/>
                         <outlet property="btnShareFacebook" destination="ag9-5H-84m" id="xDm-OT-7oq"/>
                         <outlet property="imgMedal" destination="RTy-RU-lOu" id="wVv-pS-Gqi"/>
                         <outlet property="lblHighScoreBoard" destination="6Df-ug-zHO" id="mLc-7m-7XC"/>
@@ -131,6 +147,7 @@
     </scenes>
     <resources>
         <image name="bronze.png" width="400" height="601"/>
+        <image name="facebookBtn.png" width="512" height="512"/>
         <image name="scoreboard-halloween" width="236" height="280"/>
         <image name="share-facebook.png" width="500" height="97"/>
     </resources>
