--- a/FlappyBird/Base.lproj/Main.storyboard
+++ b/FlappyBird/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BV1-FR-VrT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="K5e-P6-InP">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
@@ -12,6 +12,80 @@
         </mutableArray>
     </customFonts>
     <scenes>
+        <!--Login View Controller-->
+        <scene sceneID="GHH-Uv-IiC">
+            <objects>
+                <viewController id="NCr-eH-Ets" customClass="ZCCLoginViewController" customModule="FlappyDragon" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ieV-h8-Bsl"/>
+                        <viewControllerLayoutGuide type="bottom" id="fCI-Rr-S42"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="AfA-XT-9lw">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgLogin.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="9Ph-d0-xKQ">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <animations/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login Facebook" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fXN-WP-Bad">
+                                <rect key="frame" x="116.5" y="506" width="88.5" height="14.5"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="121" id="C0X-hO-nF0"/>
+                                    <constraint firstAttribute="height" constant="21" id="qOx-aW-5Xt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="C0X-hO-nF0"/>
+                                        <exclude reference="qOx-aW-5Xt"/>
+                                    </mask>
+                                </variation>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rhs-zf-sgb">
+                                <rect key="frame" x="120" y="418" width="80" height="80"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="Hp1-If-vsU"/>
+                                    <constraint firstAttribute="height" constant="80" id="OAH-N8-Opl"/>
+                                </constraints>
+                                <state key="normal" image="facebookBtn.png"/>
+                                <connections>
+                                    <action selector="btnFacebookTapped:" destination="NCr-eH-Ets" eventType="touchUpInside" id="kIj-0N-Ghh"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="fCI-Rr-S42" firstAttribute="top" secondItem="Rhs-zf-sgb" secondAttribute="bottom" constant="70" id="1C8-TP-wp8"/>
+                            <constraint firstItem="9Ph-d0-xKQ" firstAttribute="leading" secondItem="AfA-XT-9lw" secondAttribute="leading" id="Kn3-YD-6B7"/>
+                            <constraint firstItem="fXN-WP-Bad" firstAttribute="centerX" secondItem="Rhs-zf-sgb" secondAttribute="centerX" id="Pms-WC-9UX"/>
+                            <constraint firstAttribute="trailing" secondItem="9Ph-d0-xKQ" secondAttribute="trailing" id="bdV-S0-Iqz"/>
+                            <constraint firstItem="Rhs-zf-sgb" firstAttribute="centerX" secondItem="AfA-XT-9lw" secondAttribute="centerX" id="lf6-8H-lq9"/>
+                            <constraint firstItem="fXN-WP-Bad" firstAttribute="top" secondItem="Rhs-zf-sgb" secondAttribute="bottom" constant="8" id="msV-jH-WmL"/>
+                            <constraint firstItem="9Ph-d0-xKQ" firstAttribute="top" secondItem="AfA-XT-9lw" secondAttribute="top" id="qtS-q0-FIh"/>
+                            <constraint firstItem="fCI-Rr-S42" firstAttribute="top" secondItem="9Ph-d0-xKQ" secondAttribute="bottom" id="wma-7y-7E4"/>
+                        </constraints>
+                    </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <navigationItem key="navigationItem" id="6bU-VG-9uI"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="btnFacebook" destination="Rhs-zf-sgb" id="kPr-OU-1L9"/>
+                        <outlet property="lblFacebookName" destination="fXN-WP-Bad" id="N8d-Ya-UZ8"/>
+                        <segue destination="BV1-FR-VrT" kind="push" identifier="LoginSuccess" id="4VO-cP-2ZS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dSZ-Db-oVh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-902" y="366"/>
+        </scene>
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
             <objects>
@@ -21,11 +95,11 @@
                         <viewControllerLayoutGuide type="bottom" id="khH-OB-KpY"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3se-qz-xqx" customClass="SKView">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nhd-6z-qlX">
-                                <rect key="frame" x="541" y="25" width="50" height="50"/>
+                                <rect key="frame" x="265" y="25" width="50" height="50"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="hZn-G6-jEy"/>
@@ -59,7 +133,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zya-cO-b0R">
-                                <rect key="frame" x="175" y="175" width="250" height="250"/>
+                                <rect key="frame" x="35" y="159" width="250" height="250"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scoreboard-halloween" translatesAutoresizingMaskIntoConstraints="NO" id="8Wc-Dm-xkU">
                                         <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
@@ -95,7 +169,7 @@
                                 </constraints>
                             </view>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ag9-5H-84m" userLabel="shareFacebook">
-                                <rect key="frame" x="215" y="375" width="170" height="35"/>
+                                <rect key="frame" x="75" y="359" width="170" height="35"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="170" id="gjE-O5-ag7"/>
@@ -106,20 +180,30 @@
                                     <action selector="btnShareFacebookTapped:" destination="BV1-FR-VrT" eventType="touchUpInside" id="t9v-Gw-TBJ"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login Facebook" textAlignment="right" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tsm-Hu-NNW">
+                                <rect key="frame" x="239" y="77" width="75.5" height="12"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="10"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="foz-WR-0ew" firstAttribute="top" secondItem="maK-i9-Uhn" secondAttribute="bottom" constant="5" id="7Yx-54-mMy"/>
+                            <constraint firstItem="tsm-Hu-NNW" firstAttribute="top" secondItem="nhd-6z-qlX" secondAttribute="bottom" constant="2" id="CIq-kh-ezB"/>
                             <constraint firstItem="ag9-5H-84m" firstAttribute="top" secondItem="8Wc-Dm-xkU" secondAttribute="bottom" constant="8" id="Hbm-WG-KCc"/>
                             <constraint firstItem="ag9-5H-84m" firstAttribute="top" secondItem="zya-cO-b0R" secondAttribute="bottom" constant="-50" id="KUW-j7-dJl"/>
                             <constraint firstItem="foz-WR-0ew" firstAttribute="leading" secondItem="x3r-rN-OZb" secondAttribute="trailing" constant="8" id="Mbf-JA-Xbp"/>
+                            <constraint firstItem="tsm-Hu-NNW" firstAttribute="trailing" secondItem="3se-qz-xqx" secondAttribute="trailingMargin" id="MgM-EY-nXg"/>
                             <constraint firstItem="zya-cO-b0R" firstAttribute="centerY" secondItem="3se-qz-xqx" secondAttribute="centerY" id="TQZ-dq-YXq"/>
                             <constraint firstItem="nhd-6z-qlX" firstAttribute="top" secondItem="maK-i9-Uhn" secondAttribute="bottom" constant="5" id="Ttj-2X-7M9"/>
                             <constraint firstItem="x3r-rN-OZb" firstAttribute="top" secondItem="maK-i9-Uhn" secondAttribute="bottom" constant="5" id="YlP-9Q-MCJ"/>
                             <constraint firstItem="ag9-5H-84m" firstAttribute="top" secondItem="zya-cO-b0R" secondAttribute="bottom" constant="8" id="gcQ-r6-mBN"/>
                             <constraint firstItem="x3r-rN-OZb" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leading" constant="5" id="ngL-cW-2HX"/>
                             <constraint firstAttribute="trailingMargin" secondItem="nhd-6z-qlX" secondAttribute="trailing" constant="-11" id="qmv-ix-WCv"/>
+                            <constraint firstItem="tsm-Hu-NNW" firstAttribute="trailing" secondItem="nhd-6z-qlX" secondAttribute="trailing" id="ry1-re-BGM"/>
                             <constraint firstItem="zya-cO-b0R" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="sss-Kv-XvM"/>
                             <constraint firstItem="ag9-5H-84m" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="uf0-LZ-Mi0"/>
                         </constraints>
@@ -127,13 +211,19 @@
                             <mask key="constraints">
                                 <exclude reference="Hbm-WG-KCc"/>
                                 <exclude reference="gcQ-r6-mBN"/>
+                                <exclude reference="MgM-EY-nXg"/>
                             </mask>
                         </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="e5N-wx-JEb"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="btnFacebook" destination="nhd-6z-qlX" id="2du-JZ-byt"/>
                         <outlet property="btnShareFacebook" destination="ag9-5H-84m" id="xDm-OT-7oq"/>
                         <outlet property="imgMedal" destination="RTy-RU-lOu" id="wVv-pS-Gqi"/>
+                        <outlet property="lblFacebookName" destination="tsm-Hu-NNW" id="geF-X3-6Gy"/>
                         <outlet property="lblHighScoreBoard" destination="6Df-ug-zHO" id="mLc-7m-7XC"/>
                         <outlet property="lblHighestScore" destination="foz-WR-0ew" id="c9y-YR-HH5"/>
                         <outlet property="lblHighestScoreBoard" destination="Wmh-Lm-CtZ" id="XTK-GI-geH"/>
@@ -142,10 +232,32 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="236" y="469"/>
+            <point key="canvasLocation" x="-492" y="366"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Sx1-fS-3ph">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="K5e-P6-InP" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fDj-50-40N">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="NCr-eH-Ets" kind="relationship" relationship="rootViewController" id="Ncv-52-VFD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wcf-Hb-N3n" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1308" y="366"/>
         </scene>
     </scenes>
     <resources>
+        <image name="bgLogin.jpg" width="1920" height="1200"/>
         <image name="bronze.png" width="400" height="601"/>
         <image name="facebookBtn.png" width="512" height="512"/>
         <image name="scoreboard-halloween" width="236" height="280"/>
