--- a/FlappyBird/Launch Screen.storyboard
+++ b/FlappyBird/Launch Screen.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" semanticContentAttribute="spatial" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="halloween-bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="I8V-CH-iAi" userLabel="background">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" semanticContentAttribute="spatial" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgLogin.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="I8V-CH-iAi" userLabel="background">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <animations/>
                             </imageView>
@@ -29,16 +29,8 @@
                                 <color key="textColor" red="0.94117647058823528" green="0.82745098039215681" blue="0.73333333333333328" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="frame-5.png" translatesAutoresizingMaskIntoConstraints="NO" id="eBj-lS-En7">
-                                <rect key="frame" x="250" y="192" width="100" height="100"/>
-                                <animations/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="BJn-wE-sCN"/>
-                                    <constraint firstAttribute="width" constant="100" id="cHe-dp-8Xb"/>
-                                </constraints>
-                            </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flappy Bat" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="GJd-Yh-RWb">
-                                <rect key="frame" x="20" y="267.5" width="560" height="65"/>
+                                <rect key="frame" x="20" y="481" width="560" height="65"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="50"/>
                                 <color key="textColor" red="0.50196078431372548" green="0.40000000000000002" blue="0.31372549019607843" alpha="1" colorSpace="calibratedRGB"/>
@@ -46,7 +38,7 @@
                             </label>
                         </subviews>
                         <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="obG-Y5-kRd" secondAttribute="centerX" id="5cz-MP-9tL"/>
                             <constraint firstItem="I8V-CH-iAi" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="90w-IE-0Vf"/>
@@ -55,15 +47,15 @@
                             <constraint firstItem="I8V-CH-iAi" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="LBc-PE-P4g"/>
                             <constraint firstAttribute="centerX" secondItem="GJd-Yh-RWb" secondAttribute="centerX" id="Q3B-4B-g5h"/>
                             <constraint firstItem="obG-Y5-kRd" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="20" symbolic="YES" id="SfN-ll-jLj"/>
-                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="top" secondItem="eBj-lS-En7" secondAttribute="bottom" constant="-25" id="XZz-A4-TlQ"/>
+                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="top" secondItem="I8V-CH-iAi" secondAttribute="bottom" constant="-119" id="VwV-Oo-EEg"/>
                             <constraint firstAttribute="bottom" secondItem="obG-Y5-kRd" secondAttribute="bottom" constant="20" id="Y44-ml-fuU"/>
-                            <constraint firstItem="eBj-lS-En7" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="anP-ZU-f2h"/>
                             <constraint firstItem="GJd-Yh-RWb" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="kAR-hk-6L1"/>
                             <constraint firstItem="GJd-Yh-RWb" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="bottom" multiplier="1/3" constant="1" id="moa-c2-u7t"/>
                             <constraint firstItem="GJd-Yh-RWb" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="20" symbolic="YES" id="x7j-FC-K8j"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="kAR-hk-6L1"/>
                                 <exclude reference="moa-c2-u7t"/>
                             </mask>
                         </variation>
@@ -75,7 +67,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="frame-5.png" width="800" height="812"/>
-        <image name="halloween-bg.png" width="1024" height="768"/>
+        <image name="bgLogin.jpg" width="1920" height="1200"/>
     </resources>
 </document>
